==> amprnet-sweden/amprnet.se-Radio/ssd1306.c <==
#include "ssd1306.h"
#include "ti_drivers_config.h"
#include "Ampr-radio.h"
#include "oled.h"
#include <ti/drivers/I2C.h>

uint8_t SSD1306_Init (uint8_t address)
{ 
//	  const uint8_t * list = INIT_SSD1306;
  uint8_t * list = &INIT_SSD1306_OWN;
  uint8_t status = INIT_STATUS;                                   // init status
  uint8_t arguments,cmdbyte,bytecnt;
  uint8_t commands = *list++;

  xprint("1306 init ");
  xprint_char(commands);
  xprint(" ccmds\n");
  bytecnt = 0;
  // -------------------------------------------------------------------------------------
  while (commands--) {
    // Command
    // -----------------------------------------------------------------------------------
//	    status = SSD1306_Send_Command (pgm_read_byte(list++));
	  cmdbyte = *list++;
	  arguments = *list++;
//	  xprint("cmd ");
//	  xprint_xchar(cmdbyte);
	  wdata[0] = 0;
	  wdata[1] = cmdbyte;
	  bytecnt = 2;
//	  xprint(" args ");
//	  xprint_xchar(arguments);
	  while (arguments-- > 0) {
		  wdata[bytecnt++] = *list;
//		  xprint(" ");
//		  xprint_xchar(*list);
		  list++;
	  }
	  transaction.writeCount = bytecnt;
//	  xprint(" i2cout ");
//	  xprint_char(bytecnt);
//	  xprint("\n");
	  I2C_transfer(OLEDHandle, &transaction);
	  if(transaction.status != 0) {
	        return(transaction.status);
	  }
	  if(cmdbyte == 0xdb)
		  delay(5);


//	    status = SSD1306_Send_Command (*list++);
//    if (SSD1306_SUCCESS != status) {
//      return status;
//    }
    // Arguments
    // -----------------------------------------------------------------------------------
//    arguments = pgm_read_byte (list++);
//    arguments = list++;
//    while (arguments--) {
//        status = SSD1306_Send_Command (pgm_read_byte(list++));  // argument
//        status = SSD1306_Send_Command (*list++);  // argument
//      if (SSD1306_SUCCESS != status) {
//        return status;
//      }
    }
    xprint("\n end of list\n");
//  }
  // TWI: Stop
  // -------------------------------------------------------------------------------------
//  TWI_Stop (); GW

  return SSD1306_SUCCESS;
}

uint8_t SSD1306_Send_Command (uint8_t command)
{
  uint8_t status = INIT_STATUS;

  transaction.writeBuf = &wdata;
  transaction.readCount = 0; //sizeof(rdata);
  transaction.writeCount = 2;
  wdata[0] = 0;
  wdata[1] = command;
//    Expander_Write(0);
  I2C_transfer(OLEDHandle, &transaction);
//  if(transaction.status != 0) {
      return(transaction.status);
//  }
}

uint8_t SSD1306_DrawChar (char character)
{
  uint8_t i = 0;
  char outbuf[16];

  if (SSD1306_UpdatePosition () == SSD1306_ERROR) {
    return SSD1306_ERROR;
  }
  while (i < CHARS_COLS_LENGTH) {
//	    sprintf(outbuf,"%08x\n",*(&FONTS[character-32][i]));
//	    xprint(outbuf);

    cacheMemLcd[_counter++] = *(&FONTS[character-32][i++]);
  }
  _counter++;

  return SSD1306_SUCCESS;
}

void SSD1306_DrawString (char *str)
{
  int i = 0;
  while (str[i] != '\0') {
    SSD1306_DrawChar (str[i++]);
  }
}

uint8_t SSD1306_DrawPixel (uint8_t x, uint8_t y)
{
  uint8_t page = 0;
  uint8_t pixel = 0;
  
  if ((x > MAX_X) || (y > MAX_Y)) {                               // if out of range
    return SSD1306_ERROR;                                         // out of range
  }
  page = y >> 3;                                                  // find page (y / 8)
  pixel = 1 << (y - (page << 3));                                 // which pixel (y % 8)
  _counter = x + (page << 7);                                     // update counter
  cacheMemLcd[_counter++] |= pixel;                               // save pixel

  return SSD1306_SUCCESS;
}
